<resources>
    <string name="app_name">HrDepartmentClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная страница</string>
    <string name="menu_department">Отделы</string>
    <string name="menu_post">Должности</string>
    <string name="menu_worker">Сотрудники</string>
    <string name="menu_adressOfDepartment">Адреса отделов</string>
    <string name="menu_divider">_______________________</string>
    <string name="url">192.168.126.189</string>
</resources>